--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "pdf-parse": "^2.4.5",
+    "pdfjs-dist": "^5.4.530",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
     "vite": "npm:rolldown-vite@7.2.5"
