fix: replace experimental rolldown-vite with stable vite 6 to fix linux build

--- a/package.json
+++ b/package.json
@@ -38,9 +38,6 @@
     "pdfjs-dist": "^5.4.530",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
-    "vite": "npm:rolldown-vite@7.2.5"
-  },
-  "overrides": {
-    "vite": "npm:rolldown-vite@7.2.5"
+    "vite": "^6.0.0"
   }
 }
